--- a/simplyOrganicsAngular/src/app/app-navbar/app-navbar.component.html
+++ b/simplyOrganicsAngular/src/app/app-navbar/app-navbar.component.html
@@ -25,183 +25,36 @@
                 </a>
               </div>
               <ul class="menu-items col-xs-12">
-                <li class="menu-item depth-1 menucol-1-3 ">
+                <li class="menu-item depth-1 menucol-1-3" *ngFor = "let category of results">
                   <div class="title title_font">
-                    <a href="#"> Shop Pages </a>
+                    <a href="#"> {{category.cat_name}} </a>
                   </div>
-                  <ul class="submenu">
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shop_grid.html"> Shop grid </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shop_grid_right_sidebar.html"> Shop grid right sidebar</a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shop_list.html"> Shop list </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shop_list_right_sidebar.html"> Shop list right sidebar</a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shop_grid_full_width.html"> Shop grid full width </a>
-                      </div>
-                    </li>
-                  </ul>
+                </li>
+                <!-- <li class="menu-item depth-1 menucol-1-3 ">
+                  <div class="title title_font">
+                    <a href="#"> Flour & Cereals </a>
+                  </div>
                 </li>
                 <li class="menu-item depth-1 menucol-1-3 ">
                   <div class="title title_font">
-                    <a href="#"> Ecommerce Pages </a>
+                    <a href="#"> Ghaani Oils </a>
                   </div>
-                  <ul class="submenu">
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="wishlist.html"> Wishlists </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="checkout.html"> Checkout </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="compare.html"> Compare </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="shopping_cart.html"> Shopping cart </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="quick_view.html"> Quick View </a>
-                      </div>
-                    </li>
-                  </ul>
                 </li>
                 <li class="menu-item depth-1 menucol-1-3 ">
                   <div class="title title_font">
-                    <a href="#"> Static Pages </a>
+                    <a href="#"> Ghee </a>
                   </div>
-                  <ul class="submenu">
-                    <li class="menu-item depth-2 category ">
-                      <div class="title">
-                        <a href="account_page.html"> Create Account Page </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="about_us.html"> About Us </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="contact_us.html"> Contact us </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="404error.html"> Error 404 </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="faq.html"> FAQ </a>
-                      </div>
-                    </li>
-                  </ul>
                 </li>
                 <li class="menu-item depth-1 menucol-1-3 ">
                   <div class="title title_font">
-                    <a href="#"> Product Categories </a>
+                    <a href="#"> Pulses </a>
                   </div>
-                  <ul class="submenu">
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="cat-3-col.html"> 3 Column Sidebar </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="cat-4-col.html"> 4 Column Sidebar</a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="cat-4-col-full.html"> 4 Column Full width </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="cat-6-col.html"> 6 Columns Full width</a>
-                      </div>
-                    </li>
-                  </ul>
                 </li>
                 <li class="menu-item depth-1 menucol-1-3 ">
                   <div class="title title_font">
-                    <a href="#"> Single Product Pages </a>
+                    <a href="#"> Rice </a>
                   </div>
-                  <ul class="submenu">
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="single_product.html"> single product </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="single_product_left_sidebar.html"> single product left sidebar</a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="single_product_right_sidebar.html"> single product right sidebar</a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="single_product_magnify_zoom.html"> single product magnify zoom</a>
-                      </div>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item depth-1 menucol-1-3 ">
-                  <div class="title title_font">
-                    <a href="#"> Blog Pages </a>
-                  </div>
-                  <ul class="submenu">
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="blog_right_sidebar.html"> Blog – Right Sidebar </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="blog_left_sidebar.html"> Blog – Left Sidebar </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="blog_full_width.html"> Blog – Full-Width </a>
-                      </div>
-                    </li>
-                    <li class="menu-item">
-                      <div class="title">
-                        <a href="single_post.html"> Single post </a>
-                      </div>
-                    </li>
-                  </ul>
-                </li>
+                </li> -->
               </ul>
             </li>
             <li class="mt-root">
