--- a/simplyOrganicsAngular/src/app/home/home.component.html
+++ b/simplyOrganicsAngular/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div id="page"> 
 <app-header></app-header>
 <app-navbar></app-navbar>
-<app-app-home-slider></app-app-home-slider>
+<!-- <app-app-home-slider></app-app-home-slider> -->
+<app-shop></app-shop>
 <app-app-service-section></app-app-service-section>
 <app-footer></app-footer>
 </div>
